alterando path do css

--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
-    <link href="/dist/output.css" rel="stylesheet">
+    <link href="./dist/output.css" rel="stylesheet">
 </head>
 
 <body class="bg-gradient-to-b from-[#001D40] via-[#192F49] to-[#0e2036]   m-10">
@@ -20,7 +20,7 @@
     </header>
     <div class="m-10">
         <div class="flex justify-center">
-            <img src="/assets/images/image 1.svg" alt="avatar" class="flex justify-center">
+            <img src="./assets/images/image 1.svg" alt="avatar" class="flex justify-center">
         </div>
         <div class="flex m-auto justify-center p-1 bg-[#00244F] text-white rounded-full space-x-2 w-[15rem]">
             <img src="/assets/images/Ellipse 1.svg">
