alterando path das imagens

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <img src="./assets/images/image 1.svg" alt="avatar" class="flex justify-center">
         </div>
         <div class="flex m-auto justify-center p-1 bg-[#00244F] text-white rounded-full space-x-2 w-[15rem]">
-            <img src="/assets/images/Ellipse 1.svg">
+            <img src="./assets/images/Ellipse 1.svg">
             <span> Available for opportunies</span>
         </div>
     </div>
@@ -36,7 +36,7 @@
             </div>
             <div class="flex justify-center m-10">
                 <button class="flex px-5 py-1 space-x-3 bg-white text-white rounded">
-                    <img src="/assets/images/🦆 emoji _waving hand sign_.svg" alt="hand-sign"> 
+                    <img src="./assets/images/🦆 emoji _waving hand sign_.svg" alt="hand-sign"> 
                     <p class="text-center text-gray-600 text-base font-bold">Let's talk</p>
                 </button>
             </div>
@@ -128,50 +128,50 @@
             <div>
                 <h2>Qr Code Generator</h2>
                 <div>
-                    <img src="/assets/images/🦆 icon _check circled outline_.png" alt="">
+                    <img src="./assets/images/🦆 icon _check circled outline_.png" alt="">
                     <p>Responsive design</p>
                 </div>
                 <div>
-                    <img src="/assets/images/🦆 icon _check circled outline_.png" alt="">
+                    <img src="./assets/images/🦆 icon _check circled outline_.png" alt="">
                     <p>Users can enter a URL.</p>
                 </div>
                 <div>
-                    <img src="/assets/images/🦆 icon _check circled outline_.png" alt="">
+                    <img src="./assets/images/🦆 icon _check circled outline_.png" alt="">
                     <p>The QR Code is displayed on the screen for use.</p>
                 </div>
-                <button>View the project <img src="/assets/images/🦆 icon _Alternate External Link_.png"
+                <button>View the project <img src="./assets/images/🦆 icon _Alternate External Link_.png"
                         alt=""></button>
-                <img src="/assets/images/foto.svg" alt="">
+                <img src=".assets/images/foto.svg" alt="">
             </div>
             <div>
                 <h2>Interactive rating</h2>
                 <div>
-                    <img src="/assets/images/🦆 icon _check circled outline_.png" alt="">
+                    <img src="./assets/images/🦆 icon _check circled outline_.png" alt="">
                     <p>Responsive design</p>
                 </div>
                 <div>
-                    <img src="/assets/images/Screenshot_2 1.svg" alt="">
+                    <img src="./assets/images/Screenshot_2 1.svg" alt="">
                     <p>Users can select a numerical rating from 1 to 5 stars.</p>
                 </div>
-                <button>View the project <img src="/assets/images/🦆 icon _Alternate External Link_.png"
+                <button>View the project <img src="./assets/images/🦆 icon _Alternate External Link_.png"
                         alt=""></button>
-                <img src="/assets/images/Screenshot_3 1.svg" alt="">
+                <img src="./assets/images/Screenshot_3 1.svg" alt="">
             </div>
             <div>
                 <h2>Entra 21 - Projects</h2>
                 <div>
-                    <img src="/assets/images/🦆 icon _check circled outline_.png" alt="">
+                    <img src="./assets/images/🦆 icon _check circled outline_.png" alt="">
                     <p>This repository is my learning path in the Java training course by Entra21!</p>
                 </div>
-                <button>View the project <img src="/assets/images/🦆 icon _Alternate External Link_.png"
+                <button>View the project <img src="./assets/images/🦆 icon _Alternate External Link_.png"
                         alt=""></button>
-                <img src="/assets/images/entra21-prototipo.png" alt="">
+                <img src="./assets/images/entra21-prototipo.png" alt="">
             </div>
         </section>
         <section>
             <p>A B O U T M E</p>
             <h1>Know who I am</h1>
-            <img src="/assets/images/image 2.svg" alt="">
+            <img src="./assets/images/image 2.svg" alt="">
             <p>
                 I'm passionate about continuous learning!
                 I am participating in Entra21, a well-regarded technology training program in Santa Catarina, Brazil.
@@ -187,10 +187,10 @@
             </p>
             <h2>Let’s now more about me</h2>
             <div>
-                <img src="/assets/images/Ellipse 2.svg" alt="">
+                <img src="./assets/images/Ellipse 2.svg" alt="">
                 <h6>Current Read</h6>
                 <p>The lean startup - Eric Reis</p>
-                <img src="/assets/images/leanstartup-LIVRO-empreendedorismo 1.svg" alt="">
+                <img src="./assets/images/leanstartup-LIVRO-empreendedorismo 1.svg" alt="">
             </div>
             <div>
                 <span>Communication</span>
@@ -200,7 +200,7 @@
                 <span>Critical thinking</span>
             </div>
             <div>
-                <img src="/assets/images/" alt="">
+                <img src="./assets/images/" alt="">
             </div>
         </section>
         <section>
