feito todas as sections

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
         </div>
     </div>
     <main>
-        <section class="my-[4rem]">
+        <section>
             <h1 class="flex justify-center text-center text-white text-4xl">Wander Throug My Portfolio</h1>
             <div class="text-center text-white text-opacity-60 text-xs m-5">
                 <p>I`m a student of programming.</p>
@@ -121,7 +121,7 @@
             </div>
 
         </section>
-        <section>
+        <section class="my-[4rem]">
             <pre class="m-10 text-center" style="color: #70FF00;">W H A T  I  D O</pre>
             <h1 class="flex justify-center text-center text-white text-4xl">Recently Projects</h1>
             <div class="text-center text-white text-opacity-60 text-xs m-5">
@@ -175,33 +175,36 @@
             </div>
 
             <div class="text-white my-[4rem] p-5 rounded-md"
-            style="height: 25rem;background: linear-gradient(90deg, rgba(0, 65, 80, 0.85) 21.13%, rgba(0, 65, 80, 0.21) 65.03%);">
-            <div class="flex justify-center m-5">
-                <img src="./assets/images/Screenshot_3 1.svg" alt="">
-            </div>
-            <div class="text-white text-opacity-60 text-center text-xs m-5">
-                <p>This repo logs my Java learning at Entra21, covering basics to advanced Java, ending with a hands-on project.
-                </p>
-            </div>
-            <div class="flex justify-center" style="margin-top: 3rem;">
-                <button class="flex space-x-3 "
-                    style="border-radius: 0.625rem;border: 1px solid rgba(255, 255, 255, 0.15);background: rgba(255, 255, 255, 0.00); padding: 0.5rem 1.5rem;">
-                    <p>
-                        View the project
+                style="height: 25rem;background: linear-gradient(90deg, rgba(0, 65, 80, 0.85) 21.13%, rgba(0, 65, 80, 0.21) 65.03%);">
+                <div class="flex justify-center m-5">
+                    <img src="./assets/images/Screenshot_3 1.svg" alt="">
+                </div>
+                <div class="text-white text-opacity-60 text-center text-xs m-5">
+                    <p>This repo logs my Java learning at Entra21, covering basics to advanced Java, ending with a
+                        hands-on project.
                     </p>
-                    <div>
-                        <img src="./assets/images/Vector.svg" alt="">
-                    </div>
-                </button>
+                </div>
+                <div class="flex justify-center" style="margin-top: 3rem;">
+                    <button class="flex space-x-3 "
+                        style="border-radius: 0.625rem;border: 1px solid rgba(255, 255, 255, 0.15);background: rgba(255, 255, 255, 0.00); padding: 0.5rem 1.5rem;">
+                        <p>
+                            View the project
+                        </p>
+                        <div>
+                            <img src="./assets/images/Vector.svg" alt="">
+                        </div>
+                    </button>
+                </div>
             </div>
-        </div>
 
         </section>
-        <section>
-            <p>A B O U T M E</p>
-            <h1>Know who I am</h1>
-            <img src="./assets/images/image 2.svg" alt="">
-            <p>
+        <section class="my-[4rem]">
+            <pre class="m-10 text-center" style="color: #70FF00;">A B O U T  M E</pre>
+            <div class="flex justify-center">
+                <img src="./assets/images/image 2.svg" alt="">
+            </div>
+            <h1 class="flex justify-center text-center text-white text-4xl m-5">Know who I am</h1>
+            <p class="text-white text-opacity-60">
                 I'm passionate about continuous learning!
                 I am participating in Entra21, a well-regarded technology training program in Santa Catarina, Brazil.
                 My first exposure to the job market was at the age of 14, at Unimed Alto Vale, where I gained a solid
@@ -211,37 +214,40 @@
                 Now, my next goal is to transition into the area of development.
                 In addition to my passion for technology, I have a love for music, games, business, and books.
                 My English proficiency is at an intermediate level (B1).
-                I'm always open to new connections and enjoy sharing experiences. If you resonate with my profile, feel
-                free to get in touch!
+                I'm always open to new connections and enjoy sharing experiences.
             </p>
-            <h2>Let’s now more about me</h2>
-            <div>
-                <img src="./assets/images/Ellipse 2.svg" alt="">
-                <h6>Current Read</h6>
-                <p>The lean startup - Eric Reis</p>
-                <img src="./assets/images/leanstartup-LIVRO-empreendedorismo 1.svg" alt="">
+            <h2 class="flex justify-center text-center text-white text-5x1 m-5">Let’s now more about me</h2>
+
+            <div class="m-auto p-5" style="border-radius: 1.25rem;
+            border: 1px solid rgba(255, 255, 255, 0.16);;background: linear-gradient(90deg, rgba(0, 65, 80, 0.82) 21.13%, rgba(0, 65, 80, 0.21) 72.88%); padding-bottom: 0; width: 12rem;
+            ">
+                <div class="flex justify-center space-x-3" style="margin: 0.5rem 0rem;">
+                    <img src="./assets/images/Ellipse 2.svg" alt="">
+                    <h6 class="text-white">Current Read</h6>
+                </div>
+                <p class="flex justify-center text-white text-opacity-60 text-xs" style="margin: 1rem 0rem;">The lean
+                    startup - Eric Reis</p>
+                <div class="flex justify-center">
+                    <img src="./assets/images/leanstartup-LIVRO-empreendedorismo 1.svg" alt="">
+                </div>
             </div>
-            <div>
-                <span>Communication</span>
-                <span>Teamwork</span>
-                <span>Adaptabily</span>
-                <span>Empathy</span>
-                <span>Critical thinking</span>
-            </div>
-            <div>
-                <img src="./assets/images/" alt="">
-            </div>
+
+
+
+
         </section>
-        <section>
-            <p>M Y E X P E R I E N C E S</p>
-            <h1>Professional Evolution</h1>
-            <div>
-                <div>
-                    <h6>Technical Support, Escalasoft Tecnologia</h6>
-                    <p>May 2022 - Nov 2023 / Rio do Sul, Brazil</p>
+        <section class="my-[4rem]">
+            <pre class="m-10 text-center" style="color: #70FF00;">M Y  E X P E R I E N C E S</pre>
+            <h1 class="flex justify-center text-center text-white text-4xl">Professional Evolution</h1>
+            <div style="margin: 5rem auto;">
+                <div style="margin: 2rem auto;">
+                    <span class="text-white">Technical Support, </span><span style="color: #70FF00;">Escalasoft
+                        Tecnologia</span>
+                    <p class="flex justify-center text-white text-opacity-60 text-xs">
+                        May 2022 - Nov 2023 / Rio do Sul, Brazil</p>
                 </div>
                 <div>
-                    <p>
+                    <p class=" text-white text-opacity-50 text-base font-normal">
                         I lead a team as the main point of contact for clients on technical matters of the WMS system.
                         Always keeping an eye on SLAs, ensuring that needs are met quickly and efficiently.
                         I use SQL skills for database analysis and problem-solving.
@@ -253,19 +259,38 @@
                 </div>
             </div>
         </section>
-        <div>
-            <h4>Let's connect</h4>
-            <button>Contact me</button>
-        </div>
+
     </main>
 
-    <footer>
-        <p>Created by @vmC0sta</p>
-        <ul>
-            <li>Linkedin</li>
-            <li>Instagram</li>
-            <li>Github</li>
-        </ul>
+    <footer class="p-5 flex text-white text-opacity-60" style="border-top: solid 0.1rem rgba(255, 255, 255, 0.144); margin: 0;">
+        <div class="flex justify-between space-x-5">
+            <span>
+                Created by @vmC0sta
+            </span>
+            <div class="flex">
+                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M12.625 7.00101C11.9863 6.99881 11.3534 7.12258 10.7626 7.36524C10.1718 7.60789 9.63461 7.96466 9.18181 8.41513C8.72902 8.8656 8.36949 9.40094 8.1238 9.99051C7.87812 10.5801 7.7511 11.2123 7.75 11.851V16.751C7.75 16.9499 7.82902 17.1407 7.96967 17.2813C8.11033 17.422 8.30109 17.501 8.5 17.501H10.25C10.4489 17.501 10.6397 17.422 10.7803 17.2813C10.921 17.1407 11 16.9499 11 16.751V11.851C10.9998 11.6238 11.0476 11.3992 11.14 11.1917C11.2325 10.9842 11.3677 10.7985 11.5367 10.6468C11.7058 10.495 11.9049 10.3806 12.1211 10.311C12.3374 10.2414 12.5658 10.2181 12.7917 10.2427C13.1967 10.2937 13.5689 10.4916 13.8377 10.7988C14.1065 11.106 14.2532 11.5011 14.25 11.9093V16.751C14.25 16.9499 14.329 17.1407 14.4697 17.2813C14.6103 17.422 14.8011 17.501 15 17.501H16.75C16.9489 17.501 17.1397 17.422 17.2803 17.2813C17.421 17.1407 17.5 16.9499 17.5 16.751V11.851C17.4989 11.2123 17.3719 10.5801 17.1262 9.99051C16.8805 9.40094 16.521 8.8656 16.0682 8.41513C15.6154 7.96466 15.0782 7.60789 14.4874 7.36524C13.8966 7.12258 13.2637 6.99881 12.625 7.00101Z"
+                        fill="white" />
+                    <path
+                        d="M5.5 7.75122H3.25C2.83579 7.75122 2.5 8.08701 2.5 8.50122V16.7512C2.5 17.1654 2.83579 17.5012 3.25 17.5012H5.5C5.91421 17.5012 6.25 17.1654 6.25 16.7512V8.50122C6.25 8.08701 5.91421 7.75122 5.5 7.75122Z"
+                        fill="white" />
+                    <path
+                        d="M4.375 6.25122C5.41053 6.25122 6.25 5.41175 6.25 4.37622C6.25 3.34069 5.41053 2.50122 4.375 2.50122C3.33947 2.50122 2.5 3.34069 2.5 4.37622C2.5 5.41175 3.33947 6.25122 4.375 6.25122Z"
+                        fill="white" />
+                </svg>
+                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path fill-rule="evenodd" clip-rule="evenodd"
+                        d="M5.87722 0.0612207C6.94389 0.0123298 7.28389 0.0012207 10 0.0012207C12.7166 0.0012207 13.0561 0.0128843 14.1222 0.0612207C15.1872 0.109557 15.9145 0.279003 16.5505 0.526221C17.2177 0.777412 17.8221 1.17098 18.3216 1.67956C18.8303 2.17904 19.2239 2.78346 19.475 3.45067C19.7222 4.08678 19.8911 4.814 19.94 5.87844C19.9889 6.94511 20 7.28511 20 10.0012C20 12.7173 19.9884 13.0573 19.94 14.124C19.8916 15.1884 19.7222 15.9157 19.475 16.5518C19.2195 17.209 18.8772 17.7673 18.3216 18.3229C17.8222 18.8315 17.2177 19.2251 16.5505 19.4762C15.9145 19.7234 15.1872 19.8923 14.1228 19.9412C13.0561 19.9901 12.7161 20.0012 10 20.0012C7.28389 20.0012 6.94389 19.9896 5.87722 19.9412C4.81278 19.8929 4.08556 19.7234 3.44945 19.4762C2.79222 19.2207 2.23389 18.8784 1.67834 18.3229C1.16967 17.8234 0.776073 17.2189 0.525 16.5518C0.277782 15.9157 0.108891 15.1884 0.06 14.124C0.0111091 13.0573 0 12.7179 0 10.0012C0 7.28456 0.0116636 6.94511 0.06 5.879C0.108336 4.814 0.277782 4.08678 0.525 3.45067C0.776191 2.7835 1.16976 2.17911 1.67834 1.67956C2.17781 1.17089 2.78223 0.777293 3.44945 0.526221C4.08556 0.279003 4.81278 0.110112 5.87722 0.0612207ZM14.0411 1.86122C12.9866 1.81344 12.67 1.80288 10 1.80288C7.33 1.80288 7.01334 1.81344 5.95889 1.86122C4.98389 1.90567 4.45445 2.06844 4.10222 2.20567C3.63555 2.38678 3.30222 2.60344 2.95222 2.95344C2.60278 3.30344 2.38555 3.63678 2.20445 4.10344C2.06722 4.45567 1.90445 4.98511 1.86 5.96011C1.81222 7.01456 1.80166 7.33122 1.80166 10.0012C1.80166 12.6712 1.81222 12.9879 1.86 14.0423C1.90445 15.0173 2.06722 15.5468 2.20445 15.899C2.36465 16.3334 2.62017 16.7263 2.95222 17.049C3.27485 17.381 3.66783 17.6366 4.10222 17.7968C4.45445 17.934 4.98389 18.0968 5.95889 18.1412C7.01334 18.189 7.32945 18.1996 10 18.1996C12.6705 18.1996 12.9866 18.189 14.0411 18.1412C15.0161 18.0968 15.5455 17.934 15.8978 17.7968C16.3645 17.6157 16.6978 17.399 17.0478 17.049C17.3798 16.7264 17.6354 16.3334 17.7955 15.899C17.9328 15.5468 18.0955 15.0173 18.14 14.0423C18.1878 12.9879 18.1984 12.6712 18.1984 10.0012C18.1984 7.33122 18.1878 7.01456 18.14 5.96011C18.0955 4.98511 17.9328 4.45567 17.7955 4.10344C17.6145 3.63678 17.3978 3.30344 17.0478 2.95344C16.6978 2.604 16.3645 2.38678 15.8978 2.20567C15.5455 2.06844 15.0161 1.90567 14.0411 1.86122ZM8.72318 13.0839C9.128 13.2516 9.56182 13.3379 10 13.3379C10.885 13.3379 11.7336 12.9863 12.3594 12.3606C12.9852 11.7349 13.3367 10.8861 13.3367 10.0012C13.3367 9.11631 12.9852 8.26758 12.3594 7.64184C11.7336 7.01609 10.885 6.66455 10 6.66455C9.56182 6.66455 9.128 6.75086 8.72318 6.91854C8.31827 7.08622 7.95048 7.33199 7.64065 7.64184C7.33081 7.95168 7.08503 8.31949 6.91735 8.72431C6.74966 9.12913 6.66336 9.56304 6.66336 10.0012C6.66336 10.4394 6.74966 10.8733 6.91735 11.2781C7.08503 11.6829 7.33081 12.0508 7.64065 12.3606C7.95048 12.6704 8.31827 12.9162 8.72318 13.0839ZM6.3655 6.36668C7.32944 5.40275 8.63682 4.86121 10 4.86121C11.3633 4.86121 12.6706 5.40275 13.6345 6.36668C14.5985 7.33062 15.14 8.63804 15.14 10.0012C15.14 11.3644 14.5985 12.6718 13.6345 13.6358C12.6706 14.5997 11.3633 15.1412 10 15.1412C8.63682 15.1412 7.32944 14.5997 6.3655 13.6358C5.40156 12.6718 4.86003 11.3644 4.86003 10.0012C4.86003 8.63804 5.40156 7.33062 6.3655 6.36668ZM16.2797 5.62702C16.5075 5.39916 16.6355 5.09012 16.6355 4.76788C16.6355 4.44564 16.5075 4.1366 16.2797 3.90875C16.0518 3.68089 15.7428 3.55288 15.4205 3.55288C15.0984 3.55288 14.7893 3.68089 14.5615 3.90875C14.3335 4.1366 14.2055 4.44564 14.2055 4.76788C14.2055 5.09012 14.3335 5.39916 14.5615 5.62702C14.7893 5.85488 15.0984 5.98288 15.4205 5.98288C15.7428 5.98288 16.0518 5.85488 16.2797 5.62702Z"
+                        fill="white" />
+                </svg>
+                <svg width="20" height="20" viewBox="0 0 20 20" fill="none" xmlns="http://www.w3.org/2000/svg">
+                    <path
+                        d="M10 0.834698C7.59455 0.810254 5.27781 1.74187 3.55894 3.4248C1.84007 5.10773 0.859712 7.40427 0.833328 9.8097C0.842597 11.7107 1.45411 13.5598 2.58005 15.0915C3.70598 16.6232 5.28839 17.7586 7.1 18.3347C7.55833 18.418 7.725 18.143 7.725 17.9014C7.725 17.6597 7.725 17.1264 7.725 16.3764C5.175 16.918 4.63333 15.1764 4.63333 15.1764C4.46358 14.6296 4.10269 14.1622 3.61666 13.8597C2.78333 13.3097 3.68333 13.318 3.68333 13.318C3.97137 13.3565 4.24696 13.4598 4.48942 13.62C4.73188 13.7802 4.93493 13.9932 5.08333 14.243C5.34194 14.6915 5.76627 15.0204 6.265 15.1591C6.76374 15.2979 7.29699 15.2352 7.75 14.9847C7.79658 14.5283 8.00324 14.1032 8.33333 13.7847C6.29999 13.5597 4.16666 12.793 4.16666 9.35136C4.14848 8.4536 4.4802 7.58396 5.09166 6.92636C4.81318 6.15559 4.84607 5.30662 5.18333 4.5597C5.18333 4.5597 5.95833 4.31803 7.68333 5.47636C9.18491 5.07623 10.7651 5.07623 12.2667 5.47636C14.0167 4.31803 14.7667 4.5597 14.7667 4.5597C15.1039 5.30662 15.1368 6.15559 14.8583 6.92636C15.484 7.5719 15.8337 8.43571 15.8333 9.3347C15.8333 12.7847 13.6833 13.543 11.6667 13.768C11.8875 13.9824 12.0581 14.2431 12.1661 14.5313C12.2742 14.8194 12.3171 15.128 12.2917 15.4347V17.893C12.2917 17.893 12.4583 18.418 12.9167 18.3264C14.7231 17.7467 16.3002 16.611 17.4227 15.0815C18.5451 13.552 19.1555 11.7069 19.1667 9.8097C19.1403 7.40427 18.1599 5.10773 16.4411 3.4248C14.7222 1.74187 12.4054 0.810254 10 0.834698Z"
+                        fill="white" />
+                </svg>
+            </div>
+        </div>
     </footer>
 
 </body>
