adicionado animação no header

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 
 <body class="bg-gradient-to-b from-[#001D40] via-[#192F49] to-[#0e2036]   m-10">
-    <header class="flex justify-center text-white">
+    <header class="reveal flex justify-center text-white" style="visibility: hidden;">
         <nav class="p-1 bg-[#d9d9d910] w-[17rem] rounded-full">
             <ul class="flex justify-center space-x-5">
                 <li>About</li>
